* Added style rules (no more extra margins and paddings) * New Feature: revisions are now supported * Changed the lightbox code a bit. I hope it solves #2014 * Removed `console.log` lines and fixed the actions in `easy-photo-album-page.js` * Removed not used translations in `lang.php`
git-svn-id: https://plugins.svn.wordpress.org/easy-photo-album/trunk@809341 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/easy-photo-album-template.css
+++ b/css/easy-photo-album-template.css
@@ -20,7 +20,7 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.epa-album {
+.epa-album, .epa-album ul, .epa-album li {
 	margin: 0 !important;
 	padding: 0 !important;
 }
